test/success/std/unused_import/main.sk
module Foo {

pub fn foo() {
}

}

module Main {

import Foo

fn main() {

}

}