test/errors/safety/unnecessary_unsafe/main.sk
module Main {

@unsafe
fn main() {
}

}